added feautures and fixed BIG registration bug. Woohoo.

--- a/content/registration.html
+++ b/content/registration.html
@@ -41,11 +41,11 @@
         <br>
         <div class="form-group">
             <label class="sr-only">Password</label>
-            <input type="password" id="password" class="form-control" placeholder="Password" required="">
+            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
         </div>
         <div class="form-group">
             <label class="sr-only">Password verification</label>
-            <input type="password" id="passwordVerification" class="form-control" placeholder="Password verification" required="">
+            <input type="password"  name="passwordVerification" class="form-control" placeholder="Password verification" required="">
         </div>
         <div id="validate-status"></div>
         <div class="form-group">
