--- a/content/home.html
+++ b/content/home.html
@@ -1,1 +1,14 @@
 <H1>Hello world<H1>
+
+  <div class="map-area">
+    <div class="map">
+  <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6853.31334931688!2d149.5710983929677!3d-33.43399308961885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x63680231a1016da2!2sWestern+Region+Academy+of+Sport!5e0!3m2!1sen!2sbd!4v1436826340086" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+  <!-- <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC7LhoC5o2MbRzEV_w5_xEg_nBKKTYh2bs&q=Eiffel+Tower,Paris+France" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+  <iframe src="https://www.google.com/maps/embed/v1/search?key=AIzaSyC7LhoC5o2MbRzEV_w5_xEg_nBKKTYh2bs&q=Boutenslaan+49,Eindhoven" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+     </div>
+  </div>
+  <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'>
+  </script>
+
+
+<!-- AIzaSyC7LhoC5o2MbRzEV_w5_xEg_nBKKTYh2bs -->
